--- a/Assets/Scenes/Main Screen/main_screen.uss
+++ b/Assets/Scenes/Main Screen/main_screen.uss
@@ -1,10 +1,11 @@
 .ui-button {
     max-width: 500px;
-    align-self: stretch;
+    align-self: auto;
     justify-content: center;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
     background-color: rgb(228, 238, 246);
+    align-items: auto;
 }
